<resources>
    <string name="app_name">GoodHomes</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Signup</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="userType_label">User Type</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="email_hint">Enter your email address here</string>
    <string name="password_hint">Enter your password here</string>
    <string name="loginBtn_text">Login</string>
    <string name="signupBtn_text">Create Account</string>
    <string name="username_label">Name</string>
    <string name="username_hint">Enter your name here</string>
    <string name="or">OR</string>
    <string name="userType_admin_label">Admin</string>
    <string name="userType_landlord_label">Landlord</string>
    <string name="userType_customer_label">Customer</string>
    <string name="createAccount_label">"New here? "</string>
    <string name="login_label">"Already a user? "</string>
    <string name="createAccount_link">Create an account</string>
    <string name="login_link">Login here</string>
    <string name="admin_bottomNav_homeLbl">Home</string>
    <string name="admin_bottomNav_createLbl">Create</string>
    <string name="bottomNav_profileLbl">Profile</string>
    <string name="number_properties_label">Number of properties</string>
    <string name="viewLandlord_card_title">View Landlord</string>
    <string name="editLandlord_card_title">Edit Landlord</string>
    <string name="deleteLandlord_card_title">Delete Landlord</string>
    <string name="ok">OK</string>
    <string name="top_landlords_label">Top Landlords</string>
    <string name="all_landlords_label">All Landlords</string>
    <string name="updateBtn_text">Update</string>
    <string name="deleteBtn_text">Delete</string>
    <string name="propertiesWithLandlordName_lbl">Properties</string>
    <string name="property_image_contentDescription">Property Image</string>
    <string name="deleteLandlord_card_msg">Are you sure you want to delete this landlord? This will result in their properties being removed aswell</string>
    <string name="cancelBtn_Text">Cancel</string>
    <string name="createLandlord_Lbl">Create Landlord</string>
    <string name="createLandlordBtn_text">Create Landlord</string>
    <string name="goBackBtn_text">Go Back</string>
    <string name="admin_bottomNav_enquiriesLbl">Enquiries</string>
    <string name="landlordSearchbar_queryHint">Search for landlords</string>
    <string name="propertySearchbar_queryHint">Search for properties</string>
    <string name="myProperties_Lbl">My Properties</string>
    <string name="allProperties_Lbl">All Properties</string>
    <string name="updateProperty_Lbl">Update Property</string>
    <string name="createProperty_Lbl">Create Property</string>
    <string name="location_label">Location</string>
    <string name="description_label">Description</string>
    <string name="price_label">Price</string>
    <string name="location_hint">Enter the property\'s location here</string>
    <string name="description_hint">Enter description here</string>
    <string name="price_hint">Enter price here</string>
    <string name="propertyName_hint">Enter property name here</string>
    <string name="deleteProperty_card_title">Delete Property</string>
    <string name="deleteProperty_card_msg">Are you sure you want to delete this property?</string>
    <string name="createBtn_text">Create</string>
    <string name="userEnquiries_label">User Enquiries</string>
    <string name="userEnquiry_text">enquired about one of your properties</string>
    <string name="userEnquiry_propertyName_label">Property:</string>
    <string name="userEnquiry_contactDetails_label">Contact Details:</string>
    <string name="userEnquiry_msg">Message:</string>
    <string name="myEnquiries_Lbl">My Enquiries</string>
    <string name="enquiry_Lbl">You enquired about this property</string>
    <string name="enquiry_location_lbl">Location:</string>
    <string name="enquiry_name_lbl">Landlord Name:</string>
    <string name="enquiry_email_lbl">Landlord Email:</string>
    <string name="enquireBtn_text">Enquire</string>
    <string name="landlord_details_lbl">Landlord Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sendEnquiryBtn_text">Send Enquiry</string>
    <string name="enquiryMsg_hint">Enter your message here</string>
    <string name="enquiryMsg_error">Please provide an enquiry message</string>
    <string name="userTypeError">User type is required</string>
    <string name="emailError">Email is required</string>
    <string name="passwordError">Password is required</string>
    <string name="nameError">Name is required</string>
    <string name="missingFieldsError">Missing fields</string>
    <string name="locationError">Location is required</string>
    <string name="descriptionError">Description is required</string>
    <string name="priceError">Price is required</string>
</resources>