<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_bottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/admin_bottomNav_homeLbl" />
    <item
        android:id="@+id/create_bottomNav"
        android:enabled="true"
        android:icon="@drawable/add_circle"
        android:title="@string/admin_bottomNav_createLbl"/>
    <item
        android:id="@+id/enquiries_bottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_enquiries"
        android:title="@string/admin_bottomNav_enquiriesLbl"/>
    <item
        android:id="@+id/profile_bottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/bottomNav_profileLbl"/>
</menu>