<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/md_theme_background"
    tools:context=".auth.SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="24sp"
        android:textColor="@color/md_theme_primary"
        android:paddingTop="12dp"
        android:fontFamily="@font/poppins_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:minHeight="48dp"
            android:text="@string/login_link"
            android:textStyle="bold"
            android:textColor="@color/md_theme_onBackground" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userType_label"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radio_userType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userType_admin_label"
            android:fontFamily="@font/poppins_regular"/>

        <RadioButton
            android:id="@+id/radio_landlord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userType_landlord_label"
            android:fontFamily="@font/poppins_regular"/>

        <RadioButton
            android:id="@+id/radio_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userType_customer_label"
            android:fontFamily="@font/poppins_regular"/>
    </RadioGroup>

    <TextView
        android:id="@+id/userTypeErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/md_theme_error"
        android:text="" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/signupBtn_text"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/md_theme_primary"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="16dp"
        app:cornerRadius="6dp" />
</LinearLayout>