<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/md_theme_background"
    tools:context=".landlord.CreatePropertyFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createProperty_Lbl"
        android:textSize="24sp"
        android:textColor="@color/md_theme_primary"
        android:paddingTop="12dp"
        android:fontFamily="@font/poppins_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propertyName_hint"
            android:inputType="text"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_home"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:inputType="text"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:inputType="text"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_description"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPriceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="text"
            android:fontFamily="@font/poppins_regular"
            android:drawableStart="@drawable/ic_price"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoBack"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/goBackBtn_text"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/md_theme_primary"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="6dp"
        app:cornerRadius="6dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateProperty"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/createBtn_text"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/md_theme_primary"
        android:fontFamily="@font/poppins_regular"
        app:cornerRadius="6dp" />

</LinearLayout>