<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.LandlordProfileAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:background="@color/md_theme_primary">

            <TextView
                android:id="@+id/usernameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_centerVertical="true"
                android:includeFontPadding="false"
                android:textColor="@color/md_theme_onPrimary"/>

            <TextView
                android:id="@+id/emailLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:fontFamily="@font/poppins_bold"
                android:layout_centerVertical="true"
                android:layout_below="@+id/usernameLbl"
                android:includeFontPadding="false"
                android:textColor="@color/md_theme_onPrimary"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:fontFamily="@font/poppins_regular"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_regular"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/propertiesLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/poppins_bold"
            android:paddingHorizontal="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            tools:listitem="@layout/property_item_recycler_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/deleteBtn_text"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/md_theme_error"
                android:fontFamily="@font/poppins_regular"
                android:layout_weight="1"
                app:cornerRadius="6dp"
                android:layout_marginEnd="25dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/updateBtn_text"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/md_theme_primary"
                android:fontFamily="@font/poppins_regular"
                android:layout_weight="1"
                app:cornerRadius="6dp"
                android:layout_marginStart="25dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>